# airport-ops-mcp

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
.claude/: CLAUDE.md  settings.json
opensky/: airports.py  client.py  types.py
prompts/: congestion_check.py  departure_brief.py  disruption_scope.py
resources/: aircraft_state.py  airport_flights.py
tools/: airport_traffic.py  congestion_check.py  delay_pattern.py  track_aircraft.py
utils/: cache.py  units.py
